Fixed horizontal scroll.

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -4,7 +4,7 @@
 body
   background-color: $white
   margin: 0
-  min-width: 400px
+  min-width: 320px
   font-family: 'Montserrat', sans-serif
   user-select: none
 
